Update Project File
- Updated project file to use Net472 for compatibility
- Added automatic building to beatsaber directory

--- a/JoshaParser.csproj
+++ b/JoshaParser.csproj
@@ -1,14 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net472</TargetFramework>
+	<LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <OutputType>Library</OutputType>
+	<BeatSaberDir>C:\Program Files (x86)\Steam\steamapps\common\Beat Saber</BeatSaberDir>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+	<Exec Command="copy /Y &quot;$(TargetDir)$(TargetName).dll&quot; &quot;$(BeatSaberDir)\Plugins\$(TargetName).dll&quot;" />
+  </Target>
 
 </Project>
