--- a/JoshaParser.csproj
+++ b/JoshaParser.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+	<Version>1.0.0</Version>
     <TargetFramework>net472</TargetFramework>
 	<LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
